fix flickering on hover and reformat some code

--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -7,20 +7,20 @@
   overflow: hidden;
   width: 250px;
   position: absolute;
+  z-index: 1;
+  &:hover {
+    > .overlay {
+      opacity: 1;
+      z-index: 3;
+    }
+  }
   img {
     width: 100%;
     height: 100%;
     object-fit: contain;
     border-radius: 5px;
     position: relative;
-    z-index: 4;
-    &:hover {
-      z-index: 2;
-      ~ .overlay {
-        opacity: 1;
-        z-index: 3;
-      }
-    }
+    z-index: -1;
   }
 
   .overlay {
